# loess-project

./: .clang-tidy  .gitignore  .lintr  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  Makefile  README.md  mkdocs.yml
.github/workflows/: R-CMD-check.yaml  ci.yml  release-conda.yml  release-cpp.yml  release-crates.yml  release-julia-jll.yml  release-julia.yml  release-node.yml  sanitizers.yml
Usersav746AppDataLocalTemp/: fastloess_new.h
benchmarks/: Makefile  README.md  compare.py  convert_criterion.py  rfastloess.R  stats_loess.R
benchmarks/R/: stats_loess.R
benchmarks/fastLoess/: Cargo.toml
benchmarks/fastLoess/src/: bench.rs  lib.rs
benchmarks/output/: r_benchmark.json  rfastloess_parallel.json  rfastloess_serial.json  rust_benchmark_cpu.json
bindings/cpp/: CMAKE.md  CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml
bindings/cpp/cmake/: fastloessConfig.cmake.in
bindings/cpp/include/: fastloess.hpp  fastlowess.h
bindings/cpp/src/: lib.rs
bindings/julia/: Cargo.toml  README.md
bindings/julia/julia/: Project.toml  README.md
bindings/julia/julia/src/: FastLOESS.jl  fastloess.jl
bindings/julia/src/: lib.rs
bindings/nodejs/: Cargo.toml  README.md  _snippet_5c356ffe339742a8925b8d958d778afe.js  index.d.ts  index.js  package-lock.json  package.json
bindings/nodejs/npm/darwin-arm64/: package.json
bindings/nodejs/npm/darwin-x64/: package.json
bindings/nodejs/npm/linux-arm64-gnu/: package.json
bindings/nodejs/npm/linux-x64-gnu/: package.json
bindings/nodejs/npm/linux-x64-musl/: package.json
bindings/nodejs/npm/win32-arm64-msvc/: package.json
bindings/nodejs/npm/win32-x64-msvc/: package.json
bindings/nodejs/src/: lib.rs
bindings/python/: Cargo.toml  Makefile  README.md  pyproject.toml
bindings/python/fastloess/: __init__.py  __init__.pyi
bindings/python/python/fastloess/: __init__.py  _core.pyi
bindings/python/src/: lib.rs
bindings/r/: .Rbuildignore  NAMESPACE  (+6 more)
bindings/r/src/: Cargo.toml  Makevars.in  Makevars.win  SOURCE_MANIFEST.toml  cargo-config.toml  dummy.c  entrypoint.c  lib.rs  vendor.tar.xz
bindings/wasm/: Cargo.toml  README.md  package-lock.json  package.json
bindings/wasm/src/: lib.rs
crates/fastLoess/: Cargo.toml  Makefile  README.md
crates/fastLoess/src/: api.rs  binding_support.rs  input.rs  lib.rs  parse.rs
crates/fastLoess/src/adapters/: batch.rs  mod.rs  online.rs  streaming.rs
crates/fastLoess/src/engine/: executor.rs  gpu.rs  mod.rs
crates/fastLoess/src/evaluation/: cv.rs  intervals.rs  mod.rs
crates/fastLoess/src/math/: mod.rs  neighborhood.rs
crates/loess-rs/: Cargo.toml  README.md
crates/loess-rs/src/: alias.rs  api.rs  lib.rs  parse.rs
crates/loess-rs/src/adapters/: batch.rs  defaults.rs  mod.rs  online.rs  streaming.rs
crates/loess-rs/src/algorithms/: defaults.rs  interpolation.rs  mod.rs  regression.rs  robustness.rs
crates/loess-rs/src/algorithms/regression/: context.rs  generic.rs  mod.rs  types.rs
crates/loess-rs/src/algorithms/regression/specialized/: accumulators_1d.rs  accumulators_2d.rs  accumulators_3d.rs  impls.rs  mod.rs
crates/loess-rs/src/engine/: defaults.rs  executor.rs  mod.rs  output.rs  validator.rs
crates/loess-rs/src/evaluation/: cv.rs  defaults.rs  diagnostics.rs  intervals.rs  mod.rs
crates/loess-rs/src/math/: boundary.rs  defaults.rs  distance.rs  hat_matrix.rs  kernel.rs  linalg.rs  mod.rs  neighborhood.rs  scaling.rs
crates/loess-rs/src/primitives/: backend.rs  buffer.rs  defaults.rs  errors.rs  mod.rs  sorting.rs  window.rs
dev/: bioc-comments.md  build_tarballs_julia.jl  check_js_licenses.mjs  check_msrv.py  check_root_cargo.py  clean_checksums.py  cran-comments.md  fix_doc_snippets.py  isolate_cargo.py  patch_vendor_crates.py  prepare_cargo.py  prepare_cran.sh  style_pkg.R  sync_version.py  verify_snippets.py
docs/: benchmarks.md  changelog.md  contributing.md  index.md
examples/: Cargo.toml
examples/cpp/: batch_smoothing.cpp  online_smoothing.cpp  streaming_smoothing.cpp
examples/fastLoess/: fast_batch_smoothing.rs  fast_online_smoothing.rs  fast_streaming_smoothing.rs
examples/julia/: batch_smoothing.jl  online_smoothing.jl  streaming_smoothing.jl
examples/loess-rs/: batch_smoothing.rs  online_smoothing.rs  streaming_smoothing.rs
examples/nodejs/: batch_smoothing.js  online_smoothing.js  streaming_smoothing.js
examples/python/: batch_smoothing.py  online_smoothing.py  streaming_smoothing.py
examples/r/: batch_smoothing.R  online_smoothing.R  streaming_smoothing.R
examples/wasm/: batch_smoothing.html  online_smoothing.html  streaming_smoothing.html
tests/: Cargo.toml
tests/cpp/: CMakeLists.txt  test_fastloess.cpp  test_fastlowess.cpp
tests/fastLoess/: gpu_tests.rs  integration_tests.rs  mod.rs  parallel_eval_tests.rs  parallel_executor_tests.rs  parallel_interval_tests.rs  smooth_pass_consistency.rs  string_option_tests.rs
tests/julia/: test_FastLOESS.jl  test_FastLOWESS.jl  test_fastloess.jl
tests/loess-rs/: adapters_batch_tests.rs  adapters_online_tests.rs  adapters_streaming_tests.rs  algorithms_interpolation_tests.rs  algorithms_regression_tests.rs  api_tests.rs  engine_executor_tests.rs  engine_output_tests.rs  engine_validator_tests.rs  evaluation_cv_tests.rs  evaluation_diagnostics_tests.rs  evaluation_intervals_tests.rs  integration_adapters_tests.rs  math_boundary_tests.rs  math_distance_tests.rs  math_hat_matrix_tests.rs  math_kernel_tests.rs  math_linalg_tests.rs  math_scaling_tests.rs  mod.rs  prelude_test.rs  primitives_window_tests.rs
tests/nodejs/: test_fastloess.js  test_fastlowess.js
tests/python/: test_fastloess.py  test_gil.py
tests/r/: testthat.R
tests/r/testthat/: test-errors.R  test-extendr-wrappers.R  test-fastloess.R  test-fastloess_online.R  test-fastloess_streaming.R  test-methods.R  test-utils.R
tests/wasm/: test_fastloess_wasm.js
validation/: Makefile  README.md  compare.py  plot.py  plot_foundation.py  plot_modeling.py  plot_streaming.py
validation/fastLoess/: Cargo.toml
validation/fastLoess/src/: validate.rs  visual.rs
(+131 files in other folders)
