[workspace]
resolver = "3"
members = [
    "crates/loess-rs",
    "crates/fastLoess",
    "bindings/python",
    "bindings/julia",
    "bindings/nodejs",
    "bindings/wasm",
    "bindings/cpp",
    "validation/fastLoess",
    "benchmarks/fastLoess",
    "examples",
    "tests",
]
exclude = ["bindings/r/src/vendor"]

[workspace.package]
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thisisamirv/loess-project"
homepage = "https://github.com/thisisamirv/loess-project"
documentation = "https://loess.readthedocs.io/"
rust-version = "1.88"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
