[workspace]
resolver = "3"
members = [
    # "crates/loess-rs",
    # "crates/fastLoess",
    # "bindings/python",
    # "bindings/julia",
    # "bindings/nodejs",
    # "bindings/wasm",
    # "bindings/cpp",
    "examples",
    "tests",
    # "validation/fastLoess",
    # "benchmarks/fastLoess",
]
exclude = ["bindings/r/src/vendor"]

[workspace.package]
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thisisamirv/loess-project"
homepage = "https://github.com/thisisamirv/loess-project"
documentation = "https://loess.readthedocs.io/"
rust-version = "1.89"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# C/C++ binding release profile: panic=abort ensures no GCC unwind symbols
# (_Unwind_Resume, _Unwind_RaiseException, etc.) are embedded in the static
# archive or DLL, making the artifact linkable by MSVC, Clang, and GCC alike.
[profile.release-c]
inherits = "release"
panic = "abort"
