[package]
name = "examples"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
loess-rs = { workspace = true, features = ["std", "dev"] }
fastLoess = { workspace = true, features = ["cpu", "dev"] }
ndarray = { workspace = true }

[features]
default = ["std", "cpu", "dev"]
std = []
cpu = []
gpu = []
dev = []

# loess examples
[[example]]
name = "batch_smoothing"
path = "loess-rs/batch_smoothing.rs"

[[example]]
name = "online_smoothing"
path = "loess-rs/online_smoothing.rs"

[[example]]
name = "streaming_smoothing"
path = "loess-rs/streaming_smoothing.rs"

# fastLoess examples
[[example]]
name = "fast_batch_smoothing"
path = "fastLoess/fast_batch_smoothing.rs"

[[example]]
name = "fast_online_smoothing"
path = "fastLoess/fast_online_smoothing.rs"

[[example]]
name = "fast_streaming_smoothing"
path = "fastLoess/fast_streaming_smoothing.rs"
