[package]
name = "examples"
version = "0.99.9"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thisisamirv/loess-project"
homepage = "https://github.com/thisisamirv/loess-project"
rust-version = "1.88"
readme = "README.md"
description = "High-performance LOESS (Locally Weighted Scatterplot Smoothing)"
keywords = ["loess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

[dependencies]
loess-rs = { path = "../crates/loess-rs", default-features = false }
fastLoess = { path = "../crates/fastLoess", default-features = false }
ndarray = "0.17"

[features]
default = ["std", "cpu", "dev"]
std = ["loess-rs/std"]
cpu = ["fastLoess/cpu"]
gpu = ["fastLoess/gpu"]
dev = ["loess-rs/dev", "fastLoess/dev"]

# loess examples
[[example]]
name = "batch_smoothing"
path = "loess-rs/batch_smoothing.rs"

[[example]]
name = "online_smoothing"
path = "loess-rs/online_smoothing.rs"

[[example]]
name = "streaming_smoothing"
path = "loess-rs/streaming_smoothing.rs"

# fastLoess examples
[[example]]
name = "fast_batch_smoothing"
path = "fastLoess/fast_batch_smoothing.rs"

[[example]]
name = "fast_online_smoothing"
path = "fastLoess/fast_online_smoothing.rs"

[[example]]
name = "fast_streaming_smoothing"
path = "fastLoess/fast_streaming_smoothing.rs"
