[package]
name = "fastloess-jl"
version = "1.0.0"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thisisamirv/loess-project"
homepage = "https://github.com/thisisamirv/loess-project"
documentation = "https://loess.readthedocs.io/"
rust-version = "1.88"
readme = "README.md"
description = "High-performance LOESS (Locally Weighted Scatterplot Smoothing)"
keywords = ["loess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

[dependencies]
loess-rs = { path = "../../crates/loess-rs", version = "1.1" }
fastLoess = { path = "../../crates/fastLoess", version = "1.1", features = ["dev", "cpu"] }

[lib]
name = "fastloess_jl"
crate-type = ["cdylib"]
