[package]
name = "fastloess-node"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
fastLoess = { path = "../../crates/fastLoess", features = ["dev", "cpu"] }
napi = { workspace = true, features = ["napi4"] }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
