[package]
name = "fastloess-node"
version = "0.9.0"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thisisamirv/loess-project"
homepage = "https://github.com/thisisamirv/loess-project"
documentation = "https://loess.readthedocs.io/"
rust-version = "1.89"
readme = "README.md"
description = "High-performance LOESS (Locally Estimated Scatterplot Smoothing)"
keywords = ["loess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

[lib]
crate-type = ["cdylib"]

[dependencies]
loess-rs = { path = "../../crates/loess-rs", version = "0.9" }
fastLoess = { path = "../../crates/fastLoess", version = "0.9", features = [
    "dev",
] }
napi = { version = "3.8", features = ["napi4"] }
napi-derive = "3.5"

[build-dependencies]
napi-build = "2.3"
