[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fastloess"
dynamic = ["version"]
description = "High-performance LOESS smoothing for Python."
authors = [{ name = "Amir Valizadeh", email = "thisisamirv@gmail.com" }]
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
]
keywords = ["loess", "smoothing", "statistics", "regression", "numpy"]
dependencies = ["numpy>=1.20.0"]

[project.urls]
Documentation = "https://loess.readthedocs.io/"
Repository = "https://github.com/thisisamirv/loess-project"
Changelog = "https://github.com/thisisamirv/loess-project/CHANGELOG.md"

[tool.maturin]
python-source = "python"
module-name = "fastloess._core"
exclude = ["docs/**", "examples/**", "tests/**", "target/**", ".github/**"]
