[package]
# Metadata
name = "fastLoess"
version = "0.9.0"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"

# Documentation and Discovery
description = "High-performance LOESS (Locally Estimated Scatterplot Smoothing)"
readme = "README.md"
repository = "https://github.com/thisisamirv/loess-project"
homepage = "https://github.com/thisisamirv/loess-project"
documentation = "https://loess.readthedocs.io/"
keywords = ["loess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

# Build
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
loess-rs = { path = "../loess-rs", version = "0.9", features = ["dev"] }
num-traits = { version = "0.2", features = ["libm"] }
ndarray = { version = "0.17" }
rayon = { version = "1.12" }

[features]
default = []
dev = []

# Document all features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
