[package]
# Metadata
name = "loess-rs"
version = "1.1.1"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

# Documentation and Discovery
description = "LOESS (Locally Weighted Scatterplot Smoothing)"
readme = "README.md"
repository = "https://github.com/thisisamirv/loess-project"
homepage = "https://github.com/thisisamirv/loess-project"
documentation = "https://loess.readthedocs.io/"
keywords = ["loess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

# Build
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
nalgebra = { version = "0.34", default-features = false, features = [
    "alloc",
    "libm",
] }
wide = { version = "0.7", default-features = false }

[dev-dependencies]
approx = "0.5"

[features]
default = ["std"]
std = ["num-traits/std", "nalgebra/std", "wide/std"]
dev = []


[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
