[package]
name = "validate"
version = "0.0.0"
rust-version = "1.88"
edition = "2024"
publish = false

[[bin]]
name = "validate"
path = "src/validate.rs"

[[bin]]
name = "visual"
path = "src/visual.rs"

[dependencies]
fastLoess = { path = "../../crates/fastLoess" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
